--- a/ex3/index.html
+++ b/ex3/index.html
@@ -1,68 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lanchonete do IFMA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <fieldset>
-    <legend> Lanchonete do IFMA </legend>
+        <legend>Lanchonete do IFMA</legend>
 
-    <form action="">
-    <div>
-     <label for="nome"> Nome do Cliente: </label>
-    <input type="text" id="nome">
-    </div>
- <div class="form-content">
+        <form id="lanchonete">
+            <div>
+                <label for="nome">Nome do Cliente:</label>
+                <input type="text" id="nome" required>
+            </div>
 
+            <div class="form-content">
+                <div class="bebidas">
+                    <label>Bebidas:</label>
+                    <div>
+                        <label><input type="radio" name="bebida" value="4.00"> Suco </label>
+                        <label><input type="radio" name="bebida" value="2.50"> Refrigerante </label>
+                        <label><input type="radio" name="bebida" value="1.50"> Água </label>
+                    </div>
+                </div>
 
-    <div class="bebidas">
-    <label for="bebidas"> bebidas:</label>
-    <div>
-      <label>
-      <input type="radio" name="bebida" value="suco">
-      Suco
-    </label>
-    <label>
-      <input type="radio" name="bebida" value="Refrigerante">
-      Refrigerante
-    </label>
-    <label>
-      <input type="radio" name="bebida" value="Água">
-      Água
-    </label>
-        </div>
-    </div>
+                <div class="doces-salgados">
+                    <label>Doces e Salgados:</label>
+                    <div>
+                        <label><input type="checkbox" value="3.50" data-nome="Bolo"> Bolo </label>
+                        <label><input type="checkbox" value="3.00" data-nome="Pastel"> Pastel </label>
+                        <label><input type="checkbox" value="4.00" data-nome="Torta"> Torta </label>
+                    </div>
+                </div>
+            </div>
 
-    <div class="doces-salgados">
-    <label for="doces">Doces e Salagados</label>
-    <div>
-
-       <label>
-      <input type="radio" name="bebida" value="bolo">
-      bolo
-    </label>
-    <label>
-      <input type="radio" name="bebida" value="Refrigerante">
-      Paste
-    </label>
-    <label>
-      <input type="radio" name="bebida" value="Água">
-      Torta
-    </label>
-    </div>
-    </div>
-     </div>
-        <div class="button-form">
-        <button> Calcular</button>
-          <button> Limpar</button>
-    </div>
-    </form>
-    
- </fieldset>
-
-<!-- <script src="script.js"></script> -->
+            <div class="button-form">
+                <button type="button" id="buttonCalcular">Calcular</button>
+                <button type="reset">Limpar</button>
+            </div>
+        </form>
+        <div id="valor"></div>
+    </fieldset>
+    <script src="script.js"></script>
 </body>
 </html>
